[gd_scene load_steps=3 format=3 uid="uid://difficulty_selection"]

[ext_resource type="Script" path="res://UI/DifficultySelection.gd" id="1_script"]
[ext_resource type="FontFile" uid="uid://ddo7ybrfl5d2s" path="res://fonts/FUSION-PIXEL-12PX-MONOSPACED-ZH_HANS.OTF" id="2_font"]

[node name="DifficultySelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -280.0
offset_right = 400.0
offset_bottom = -230.0
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "选择难度"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftPanel" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -180.0
offset_right = -50.0
offset_bottom = 220.0

[node name="VBox" type="VBoxContainer" parent="LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="LeftPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="DifficultyList" type="VBoxContainer" parent="LeftPanel/VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="BackButton" type="Button" parent="LeftPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "返回"

[node name="BubbleContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 30.0
offset_top = -180.0
offset_right = 420.0
offset_bottom = 220.0
visible = false

[node name="BubbleArrow" type="Polygon2D" parent="BubbleContainer"]
color = Color(0.2, 0.2, 0.35, 0.95)
polygon = PackedVector2Array(-20, 60, 0, 45, 0, 75)

[node name="RightPanel" type="Panel" parent="BubbleContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="VBox" type="VBoxContainer" parent="BubbleContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_constants/separation = 15

[node name="DifficultyName" type="Label" parent="BubbleContainer/RightPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "难度名称"
horizontal_alignment = 1

[node name="DescLabel" type="Label" parent="BubbleContainer/RightPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 16
text = "难度描述"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="BubbleContainer/RightPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 18
text = "最高分: 0 (消除行数: 0)"

[node name="Spacer" type="Control" parent="BubbleContainer/RightPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="BubbleContainer/RightPanel/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 24
text = "开始游戏"
